# zumo-controller

./: .clang  .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  L4R5ZI.ld  Makefile  README.md  st_nucleo_l4.cfg
gdb/: stack.gdb
modules/stcp/: CMakeLists.txt
modules/stcp/inc/: stcp.h
modules/stcp/src/: stcp.c
os/inc/: os.h  os_defs.h  os_mem.h  os_msg.h  os_util.h
os/src/: os.c  os_mem.c  os_msg.c  os_util.c
rmkernel/: README.md
src/: app_defs.h  dac_ao.c  dac_ao.h  gpio_ao.c  gpio_ao.h  main.c  math_ao.c  math_ao.h  os_port_arm_m4.c  pwm_ao.c  pwm_ao.h  rmk_hal_clock_cfg.c  rmk_hal_clock_cfg.h  state_controller.c  state_controller.h  state_machine.c  state_machine.h  stm32f4xx_hal_conf.h  stm32l4xx_hal_conf.h  system_stm32l4xx.c  system_stm32l4xx.h  trace.c  trace.h  uart_ao.c  uart_ao.h  watchdog.c  watchdog.h
src/cmd/: bay_dropoff_cmd.c  bay_dropoff_cmd.h  delay_cmd.c  delay_cmd.h  drive_open_loop_cmd.c  drive_open_loop_cmd.h  electromagnet_cmd.c  electromagnet_cmd.h  lf_cmd.c  lf_cmd.h  to_bay_cmd.c  to_bay_cmd.h  turn180_cmd.c  turn180_cmd.h  turn90_cmd.c  turn90_cmd.h  turn_cmd.c  turn_cmd.h  zone_log_cmd.c  zone_log_cmd.h
src/stm/: stm32f401xe.h  stm32f4xx.h  system_stm32f4xx.c  system_stm32f4xx.h  system_stm32l4xx.c
src/subsys/: comms_subsystem.c  comms_subsystem.h  drive_subsystem.c  drive_subsystem.h  electromagnet_subsystem.c  electromagnet_subsystem.h  input_ctl_subsystem.c  input_ctl_subsystem.h  reflectance_array_subsystem.c  reflectance_array_subsystem.h  test_subsystem.c  test_subsystem.h
